[package]
name = "injected"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
]